--- a/test/ft-partner-source-filters_test.html
+++ b/test/ft-partner-source-filters_test.html
@@ -23,10 +23,10 @@ limitations under the License.
 
     <title>ft-partner-source-filters Test</title>
 
-    <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-    <script src="../../web-component-tester/browser.js"></script>
+    <script src="../../@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
+    <script src="../../wct-browser-legacy/browser.js"></script>
 
-    <link rel="import" href="../ft-partner-source-filters.html">
+    <script type="module" src="../ft-partner-source-filters.js"></script>
 </head>
 <body>
 <test-fixture id="basic">
@@ -35,15 +35,16 @@ limitations under the License.
     </template>
 </test-fixture>
 
-<script>
-    suite('ft-partner-source-filters', function()
+<script type="module">
+import '../ft-partner-source-filters.js';
+suite('ft-partner-source-filters', function()
+{
+    test('instantiating the element works', function()
     {
-        test('instantiating the element works', function()
-        {
-            var element = fixture('basic');
-            assert.equal(element.is, 'ft-partner-source-filters');
-        });
+        var element = fixture('basic');
+        assert.equal(element.is, 'ft-partner-source-filters');
     });
+});
 </script>
 </body>
 </html>
